otp page correction done

--- a/footvibe/template/admin/base.html
+++ b/footvibe/template/admin/base.html
@@ -18,6 +18,10 @@
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'admin/imgs/theme/favicon.svg' %} ">
     <!-- Template CSS -->
     <link href="{% static 'admin/css/main.css' %}" rel="stylesheet" type="text/css" />
+
+    <!-- Include SweetAlert CSS and JS files -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
 <body>
