--- a/footvibe/template/user/user_signup.html
+++ b/footvibe/template/user/user_signup.html
@@ -1,6 +1,6 @@
 {% extends 'user/base.html' %}
 {% load static %}
-{% block title %} Login {% endblock %}
+{% block title %} SignUp {% endblock %}
 {% block  body %}
 <section class="pt-150 pb-150">
     <div class="container">
@@ -50,19 +50,19 @@
                                         <button type="submit" class="btn btn-fill-out btn-block hover-up" name="login">Submit &amp; Register</button>
                                     </div>
                                 </form>
-                                <div class="divider-text-center mt-15 mb-15">
+                                {% comment %} <div class="divider-text-center mt-15 mb-15">
                                     <span> or</span>
                                 </div>
                                 <ul class="btn-login list_none text-center mb-15">
                                     <li><a href="#" class="btn btn-google hover-up">Login With Google</a></li>
-                                </ul>
+                                </ul> {% endcomment %}
                                 <div class="text-muted text-center">Already have an account? <a href="{% url 'log:user_login' %}">Sign in now</a></div>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-1"></div>
                     <div class="col-lg-6">
-                     
+
                     </div>
                 </div>
             </div>
