some changes here and there

--- a/footvibe/template/admin_temp/attribute.html
+++ b/footvibe/template/admin_temp/attribute.html
@@ -1,7 +1,9 @@
 {% extends 'admin_temp/base.html' %}
 {% load static %}
-{% block title %} Category {% endblock %}
+{% block title %} Attribute {% endblock %}
 {% block  body %}
+
+    {% include 'admin_temp/general-alerts/alerts.html' %}
 <section class="content-main">
     <div class="content-header">
         <div>
@@ -52,6 +54,7 @@
                                         <div class="dropdown">
                                             <a href="#" data-bs-toggle="dropdown" class="btn btn-light rounded btn-sm font-sm"> <i class="material-icons md-more_horiz"></i> </a>
                                             <div class="dropdown-menu">
+                                                <a class="dropdown-item" href="{% url 'product_mng:edit_attribute' attribute.id %}">edit_info</a>
                                                 <a class="dropdown-item" href="{% url 'product_mng:attribute_available' attribute.id %}">{% if not attribute.is_active %}Mark Available {% else %}Mark Unavailable{% endif %}</a>
                                                 <a class="dropdown-item text-danger" href="{% url 'product_mng:delete_attribute' attribute.id %}">Delete</a>
                                             </div>
