--- a/footvibe/template/admin_temp/category.html
+++ b/footvibe/template/admin_temp/category.html
@@ -3,6 +3,7 @@
 {% block title %} Category {% endblock %}
 {% block  body %}
 <section class="content-main">
+    {% include 'admin_temp/general-alerts/alerts.html' %}
     <div class="content-header">
         <div>
             <h2 class="content-title card-title">Categories </h2>
