--- a/footvibe/template/user/base.html
+++ b/footvibe/template/user/base.html
@@ -130,22 +130,22 @@
                                         <a href="{% url 'log:index' %}">Home</a>
                                     </li>
                                     <li>
-                                        <a href="page-about.html">Shop</a>
+                                        <a href="#">Shop</a>
                                     </li>
                                     <li>
-                                        <a href="page-about.html">Mens</a>
+                                        <a href="#">Mens</a>
                                     </li>
                                     <li>
-                                        <a href="page-contact.html">Womens</a>
+                                        <a href="#">Womens</a>
                                     </li>
                                     <li>
-                                        <a href="page-contact.html">Kids</a>
+                                        <a href="#">Kids</a>
                                     </li>
                                     <li>
-                                        <a href="page-contact.html">About</a>
+                                        <a href="#">About</a>
                                     </li>
                                     <li>
-                                        <a href="page-contact.html">Contact Us</a>
+                                        <a href="#">Contact Us</a>
                                     </li>
                                 </ul>
                             </nav>
