--- a/footvibe/template/user/forgot_password.html
+++ b/footvibe/template/user/forgot_password.html
@@ -14,11 +14,11 @@
                                     <h3 class="mb-30">Reset Password</h3>
                                 </div>
                                 <div class="form-group">
-                                    {% for message in messages %}
+                                    {% comment %} {% for message in messages %}
                                     <div class="alert alert-danger" role="alert">
                                         {{message}}
                                     </div>
-                                    {% endfor %}
+                                    {% endfor %} {% endcomment %}
                                 </div>
                                 <form method="post">
                                     {% csrf_token %}
